js code added for changing text shadow on mouse move

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <div class="hero">
             <h1 contenteditable>🔥WOAH!</h1>
         </div>
+        <script src="index.js"></script>
     </body>
 </html>
